<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sweeper_bot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lex@todo.todo">lex</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>navigation2</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>twist_mux</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>sick_scan_xd</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>ros2_controllers</build_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <!-- <exec_depend>joint_state_publisher_gui</exec_depend> -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
